# bitutils-rs

./: Cargo.toml  README.md
bitfield/: Cargo.toml
bitfield/src/: lib.rs
bitfield/tests/: basic.rs
src/: bf.rs  bfdesc.rs  lib.rs
