[package]
name = "bitutils"
version = "3.0.0"
authors = ["archshift <gh@archshift.com>"]
license = "MIT"
description = "Bitfield macro and utilities"
repository = "https://github.com/archshift/bitutils-rs"

[dependencies]
bf-impl = "1.0"

[features]
default = ["use_std"]
use_std = ["bf-impl/use_std"]
